<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    android:layout_height="match_parent">


    <TextView
        style="@style/FontAvenirMedium"
        android:textSize="@dimen/text12"
        android:textColor="@color/autotxt_in_color"
        android:text="@string/enabling_notifications"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            style="@style/ok_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/text10"
            android:layout_marginTop="16dp"
            android:text="@string/cancel"
            android:textSize="16dp" />

        <Button
            android:id="@+id/ok_button"
            style="@style/ok_button"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/size50"
            android:layout_marginTop="16dp"
            android:text="@string/ok"
            android:textSize="16dp" />
    </LinearLayout>

</LinearLayout>