<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.numnu.android.activity.CompleteSignupActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/toolbar" />
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/dup_vegrecipe" />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:scrollbars="vertical">
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_user_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/settings_padding"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="@string/user_name" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="@string/name" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:id="@+id/text_city_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="@string/city" />

        <EditText
            android:id="@+id/et_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />

        <TextView
            android:id="@+id/text_gender_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="@string/gender" />

        <EditText
            android:id="@+id/et_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
        <TextView
            android:id="@+id/text_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="Date of Birth" />

        <EditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date" />
        <TextView
            android:id="@+id/text_food_preferences_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="@dimen/settings_padding"
            android:text="@string/foodpreferences" />

        <EditText
            android:id="@+id/et_food_preferences"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             />
        <Button
            android:id="@+id/button_save"
            android:text="@string/complete_sign_up"
            style="@style/login_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
</LinearLayout>
    </ScrollView>
</LinearLayout>