<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.numnu.android.activity.LoginActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/loginicon"
        android:id="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_with_email"
        android:textSize="@dimen/login_inner_app_text_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/button_login"
        style="@style/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/signup_margin"
        android:layout_marginRight="@dimen/signup_margin"
        android:layout_marginStart="@dimen/signup_margin"
        android:layout_marginEnd="@dimen/signup_margin"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/signup_margin"
        app:layout_constraintTop_toBottomOf="@+id/txt_forget_pwd"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.298" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:visibility="gone"
        android:textColor="@color/blue"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginRight="@dimen/signup_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="@dimen/signup_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="@dimen/signup_margin"
        android:layout_marginEnd="@dimen/signup_margin"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintHorizontal_bias="1.0" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_password_layout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:passwordToggleEnabled="true"
        android:paddingTop="0dp"
        android:layout_marginLeft="@dimen/signup_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="@dimen/signup_margin"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/signup_margin"
        android:layout_marginEnd="@dimen/signup_margin"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.0">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:paddingTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>




    <TextView
        android:id="@+id/txt_forget_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:onClick="forgetPassword"
        app:layout_constraintRight_toRightOf="@+id/et_password_layout"
        app:layout_constraintTop_toBottomOf="@+id/et_password_layout" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        app:layout_constraintLeft_toLeftOf="@+id/et_email"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        app:layout_constraintLeft_toLeftOf="@+id/et_password_layout"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <View
        android:id="@+id/view_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/privacy_policy_bottom_spacing"
        android:layout_marginLeft="@dimen/signup_margin"
        android:layout_marginRight="@dimen/signup_margin"
        android:text="@string/by_signing_up_you_agree_to_our_terms_of_service_privacy_policy"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="@dimen/signup_margin"
        android:layout_marginEnd="@dimen/signup_margin"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
